# python-snap7

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGES  CHANGES.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NATIVE_CLIENT_SUMMARY.md  README.md  README.rst  Sharp7.cs  TODO.md  Vagrantfile  appveyor.yml  dummy.c  examples_native_client.py  integration_example.py  manylinux2010.docker  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  simple_native_example.py  test_native_client.py  tox.ini
.github/: FUNDING.yml  dependabot.yml  make_wheel.sh
.github/build-scripts/: create_matrix.sh  repack_wheels_linux.sh  repack_wheels_macos.sh
.github/build_scripts/: aarch64-linux-gnu.mk  arm64_osx.mk  build_package.sh  create_matrix.sh  dummy.c  extract_lib.sh  repack_wheel.sh  repack_wheel_windows.ps1  repack_wheels_linux.sh  repack_wheels_windows.ps1  setup.py  x86_64_osx.mk
.github/workflows/: build-and-publish.yml  build-and-test-amd64.yml  build-and-test-arm32v7.yml  build-and-test-arm64.yml  build-and-test.yml  build-test-publish.yml  dependabot-auto-merge.yml  doc.yml  docker.yml  flake8.yml  linux-build-test-amd64.yml  linux-build-test-arm64.yml  linux-osx-test.yml  linux-test-with-deb.yml  linux-test.yml  linux.yml  linux_wheel.yml  mypy.yml  osx-build-test-amd64.yml  osx-test-with-brew.yml  osx-test.yml  osx.yml  pre-commit.yml  publish-pypi.yml  publish-test-pypi.yml  publish-to-test-pypi.yml  pycodestyle.yml  pytest.yml  python-package.yml  source-build.yml  test-pypi-packages.yml  test.yml  windows-build-test-amd64.yml  windows-test.yml  windows.yml
.travis/: before_install.sh  doc.docker  install.sh  mypy.docker  pycodestyle.docker  script.sh  ubuntu1804.docker  ubuntu2004.docker
debian/: changelog  control  copyright  python3-snap7-doc.doc-base  python3-snap7.examples  rules  watch
doc/: Makefile  cli.rst  client.rst  conf.py  connecting.rst  connection-issues.rst  development.rst  error-reference.rst  examples.rst  index.rst  installation.rst  introduction.rst  limitations.rst  make.bat  multi-variable.rst  plc-support.rst  reading-writing.rst  server.rst  thread-safety.rst  tia-portal-config.rst  troubleshooting.rst  util.rst
doc/API/: async_client.rst  client.rst  connection.rst  datatypes.rst  discovery.rst  error.rst  log.rst  logo.rst  optimizer.rst  partner.rst  s7commplus.rst  s7protocol.rst  server.rst  symbols.rst  tags.rst  type.rst  util.rst
example/: TIA_export_compatibility.py  boolean.py  db1_layout.txt  db_layout_fromTIA.txt  db_layouts.py  db_util.py  example.py  export_from_tia_example.txt  logo_7_8.py  read_multi.py  s7_basic.py  s7_server.py  s7_symbols.py  s7commplus_basic.py  s7commplus_server.py  snap7_symbols.py  tia_export_example.txt  write_multi.py
examples/: browse_tags.py
s7/: __init__.py  _protocol.py  _s7commplus_async_client.py  _s7commplus_client.py  _s7commplus_server.py  async_client.py  client.py  codec.py  connection.py  partner.py  protocol.py  server.py  typeinfo.py  util.py
s7/session_auth/: __init__.py  harpo_aes.py  harpo_aes_ctr.py  harpo_hash.py  key_derivation.py  keys.py  legitimate.py  utils.py
s7commplus/: __init__.py  async_client.py  blob_decompressor.py  client.py  codec.py  connection.py  legitimation.py  tag_browser.py  zlib_dicts.py
s7commplus/session_auth/: ARCHITECTURE.md  LICENSE-HarpoS7  blob_metadata.py  harpo_aes_ctr.py  legacy_auth.py
s7commplus/zlib_dicts/: 1398a37f_CompilerSettings_90000001.xml  1bac39f0_DebugInfo_90000001.xml  3c55436a_LineComm_98000001.xml  4b8416f0_IntfDesc_90000001.xml  5814b03b_IdentES_98000001.xml  66052b13_DebugInfo_IntfDesc_98000001.xml  79b2bda3_LineComm_90000001.xml  81d8db20_IdentES_90000002.xml  845fc605_NWT_98000001.xml  9b6a3a92_ExtRefData_90000001.xml  __init__.py  ab6fa31e_NWC_90000001.xml  b0155ff8_IntRefData_98000001.xml  c5d26ac3_NWC_98000001.xml  (+6 more)
snap7/: __init__.py  async_client.py  cli.py  client.py  client_async.py  client_base.py  common.py  compat.py  connection.py  data.py  datatypes.py  db.py  demo.py  discovery.py  error.py  exceptions.py  loadlib.py  log.py  logo.py  native_client.py  native_server.py  optimizer.py  partner.py  protocol.py  protocol.pyi  s7protocol.py  server.py  six.py  snap7types.py  szl.py  tags.py  testutil.py  type.py  types.py  util.py
snap7/s7util/: db.py  (+1 more)
test/: .travis.yml  client.py  conftest.py  requirements.txt  server.py  test_client.py  test_client_async.py  test_common.py  test_logo_client.py  test_mainloop.py  test_partner.py  test_s7util.py  test_server.py  test_util.py
tests/: bla.py  conftest.py  test_address_parsing.py  test_api_compatibility.py  test_api_surface.py  test_async_client.py  test_async_tls.py  test_behavioral_compatibility.py  test_blob_decompressor.py  test_cli.py  test_client.py  test_client_e2e.py  test_common.py  test_conformance.py  test_connection.py  test_coverage_gaps.py  test_datatypes.py  test_db_coverage.py  test_demo.py  test_discovery.py  test_error.py  test_feature_matrix.py  test_finalize.py  test_hypothesis.py  test_integration.py  test_logging.py  test_logo_client.py  test_logo_coverage.py  test_low_level_s7_client.py  test_low_level_s7_partner.py  test_low_level_s7_server.py  test_mainloop.py  test_micropython_compat.py  test_multipacket.py  test_native_all_methods.py  test_native_client.py  test_native_datatypes.py  test_native_integration_full.py  test_native_server_client.py  test_native_todo_features.py  (+50 more)
tools/: transpile_harpo_monolith.py
vagrant/: bootstrap.sh
(+130 files in other folders)
