[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-snap7"
version = "1.4"
description = "Python wrapper for the snap7 library"
authors = [
    {name = "Gijs Molenaar", email = "gijsmolenaar@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: System :: Hardware",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/gijzelaerr/python-snap7"
Documentation = "https://python-snap7.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = ["pytest", "mypy", "types-setuptools", "ruff"]
cli = ["rich", "click" ]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.setuptools.package-data]
snap7 = ["py.typed", "lib/libsnap7.so", "lib/snap7.dll", "lib/libsnap7.dylib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snap7", "snap7.lib"]

[project.scripts]
snap7-server = "snap7.server.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers =[
    "client",
    "common",
    "logo",
    "mainloop",
    "partner",
    "server",
    "util"
    ]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
output-format = "full"
line-length = 130
target-version = "py38"

[lint]
ignore = []
mccabe.max-complexity = 10
